--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav{
 
 nav {
   display: flex;
-  justify-content: space-between; /* Logo left, Account right */
+  justify-content: space-between; 
   align-items: center;
   padding: 10px 20px;
   background: #121212;
@@ -173,7 +173,7 @@ nav .brand img {
 }
 
 .icons i:hover {
-    color: #1db954; /* Spotify green */
+    color: #1db954; 
     transform: scale(1.2);
     transition: 0.3s;
 }
